--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="/client/src/pages/Pages.css">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 
       <!--     Link to Compressed Foundation CDN     -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/css/foundation.min.css"
