--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel="icon" href="./favicon.ico" type="image/ico" />
     <!-- <link rel="stylesheet" href="/client/src/pages/Pages.css"> -->
     <!-- <link rel="stylesheet" href="style.css"> -->
 
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/css/foundation.min.css"
   integrity="sha256-xpOKVlYXzQ3P03j397+jWFZLMBXLES3IiryeClgU5og= sha384-gP4DhqyoT9b1vaikoHi9XQ8If7UNLO73JFOOlQV1RATrA7D0O7TjJZifac6NwPps sha512-AKwIib1E+xDeXe0tCgbc9uSvPwVYl6Awj7xl0FoaPFostZHOuDQ1abnDNCYtxL/HWEnVOMrFyf91TDgLPi9pNg=="
   crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <!--     Links to Bootstrap JS, Popper.js and jQuery     -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -73,6 +75,7 @@
     integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" 
     crossorigin="anonymous"></script>
   </body>
+  
  
   <style>
    body {
@@ -85,11 +88,18 @@
     }
 
   a {
-  color: blue;
+  color: rgb(55, 0, 255);
   font-size: 1.5em;
   }
 
-  
+  #image {
+    height: 60px;
+    margin-left: 1em;
+  }
+
+  .nav-wrapper {
+    margin-top: 10px;
+  } 
 
 
   </style>
